<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    tools:context=".SQLiteActivity">

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/delete_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/queryBtn" />

    <Button
        android:id="@+id/queryBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/query_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyBtn" />

    <Button
        android:id="@+id/modifyBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/update_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insertBtn" />

    <Button
        android:id="@+id/insertBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/insert_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateDbBtn" />

    <Button
        android:id="@+id/updateDbBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/update_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBtn" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:text="@string/create_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/db_operation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>