<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConProvActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/readContactBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="44dp"
        android:text="@string/read_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toStartOf="@+id/readContactBtn"
        app:layout_constraintStart_toStartOf="@+id/readContactBtn"
        app:layout_constraintTop_toBottomOf="@+id/readContactBtn" />

    <Button
        android:id="@+id/updateContactBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="69dp"
        android:text="@string/update_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/readStuInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="55dp"
        android:text="@string/get_student_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateContactBtn" />

    <Button
        android:id="@+id/insertStuBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/insert_student_info"
        app:layout_constraintStart_toStartOf="@+id/contactView"
        app:layout_constraintTop_toTopOf="@+id/contactView" />
</android.support.constraint.ConstraintLayout>